<resources>
    <string name="app_name">kiosko_Model</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="comenzar">  COMENZAR</string>
    <string name="liston">liston</string>
    <string name="bienvenido_a_kiosko">¡BIENVENIDO A KIOSKO!</string>
    <string name="es_muy_nuestro">¡ES MUY NUESTRO!</string>
    <string name="backgroundlayer">backgroundLayer</string>
    <string name="espacio_asignado_para_tu_capacitaci_n">¡ESPACIO ASIGNADO PARA TU CAPACITACIÓN!</string>
    <string name="mujer_en_uniforme">Mujer en Uniforme</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="siguiente">Siguiente</string>
    <string name="recuerda">¡RECUERDA!</string>
    <string name="Este_espacio_esta_construido">ESTE ESPACIO ESTÁ CONSTRUIDO PENSANDO EN TI, CON EL PROPÓSITO DE AYUDARTE EN EL PROCESO DE CAPACITACIÓN A LOS COLABORADORES DE TU TIENDA Y PONIENDO A TU DISPOSICIÓN EL MATERIAL QUE FACILITE LA EJECUCIÓN DE TU TIENDA PARA OBTENER MEJORES RESULTADOS.</string>
    <string name="kiosko_header">Kiosko_header</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="background">Background</string>
    <string name="dropmenu">dropMenu</string>
    <string name="profile_image">profile_Image</string>
    <string name="inicio">Inicio</string>
    <string name="quienes_somos">¿Quienes somos?</string>
    <string name="nuestras_tiendas">Nuestras tiendas</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="close_button">Close button</string>
    <string name="safety_image">Safety image</string>
    <string name="sigue_las_recomendaciones_de_seguridad">Sigue las recomendaciones de seguridad</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="acceso_directo">Acceso Directo</string>
    <string name="material_de_apoyo">Material de Apoyo</string>
    <string name="con_la_finalidad_de_facilitar_tu_aprendizaje">Con la finalidad de facilitar tu aprendizaje ahora que te encuentras en tienda, ponemos a tu disposición guías rápidas y videos que te mostraran paso a paso y de manera sencilla como realizar los procesos de limpieza y ejecución de los equipos así como de las actividades diarias que llevarás a cabo en tu tienda , mismas que debes conocer para ejecutar de manera correcta.</string>
    <string name="gu_as">GUÍAS</string>
    <string name="videos">VIDEOS</string>
    <string name="loading">Loading...</string>
    <string name="images">Images</string>
    <string name="imagenpopup">ImagenPopup</string>
    <string name="Videopopup">VideoPopUp</string>
    <string name="contenido_del_grid">Contenido del grid</string>
    <string name="dentro_de_t">Dentro de tienda, existen muchos procesos que con el tiempo irás perfeccionando en la ejecución, para ayudarte con el proceso de aprendizaje y práctica de los mismos, se diseñaron las siguientes guías que te llevarán de una manera sencilla y rápida a realizar correctamente los procedimientos con los que trabajamos en Kiosko.</string>
    <string name="procedimientos_a_ejecutar">Para facilitar tú proceso de aprendizaje de los procesos que se llevan a cabo en tienda, en esta sección encontrarás videotutoriales de los procedimientos a ejecutar.</string>
    <string name="gu_as_r_pidas">Guías rápidas</string>
    <string name="channel_name">kioskoNotify</string>
    <string name="channel_description">Notificaciones del empleado del kiosko referentes al curso</string>
</resources>