<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Remember">

        <ImageView
            android:id="@+id/ribbon_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/liston"
            android:src="@drawable/liston"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/recuerda"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ribbon_up" />


        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Este_espacio_esta_construido"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome" />

        <ImageView
            android:id="@+id/red_leydi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/mujer_en_uniforme"
            android:src="@drawable/green"
            app:layout_constraintBottom_toTopOf="@+id/start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message" />

        <Button
            android:id="@+id/start"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corners"
            android:drawableEnd="@drawable/chevron"
            android:text="@string/siguiente"
            android:layout_marginBottom="50dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/ribbon_down"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/ribbon_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/liston"
            android:src="@drawable/liston"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>